bootstrap/src/options/parse_opts.cc
/* Generated by re2c 2.2 on Wed Nov  3 22:17:17 2021 */
#line 1 "../src/options/parse_opts.re"
#include <stddef.h>
#include <algorithm>
#include <string>
#include <vector>

#include "src/dfa/dfa.h"
#include "src/encoding/enc.h"
#include "src/msg/location.h"
#include "src/msg/msg.h"
#include "src/msg/warn.h"
#include "src/options/opt.h"


namespace re2c {

static inline bool next (char * & arg, char ** & argv)
{
    arg = *++argv;
    return arg != NULL;
}

static inline bool set_source_file(conopt_t &globopts, const char *source)
{
    if (!globopts.source_file.empty()) {
        error("multiple source files: %s, %s", globopts.source_file.c_str(), source);
        return false;
    } else {
        globopts.source_file = source;
        return true;
    }
}

parse_opts_t parse_opts(char **argv, conopt_t &globopts, Opt &opts, Msg &msg)
{
#define YYCTYPE unsigned char

#define NEXT_ARG(option, label) do { \
    if (next (YYCURSOR, argv)) goto label; \
    else { error_arg(option); return EXIT_FAIL; } \
} while(0)

#define ERROR(msg, arg) do { \
    error(msg, arg); \
    return EXIT_FAIL; \
} while(0)

#define ERRARG(opt, exp, arg) do { \
    error("bad argument '%s' to option %s <%s>", arg, opt, exp); \
    return EXIT_FAIL; \
} while(0)

    char *YYCURSOR, *YYMARKER;
    Warn::option_t option;

#line 61 "../src/options/parse_opts.re"


opt:
    if (!next (YYCURSOR, argv)) goto end;

#line 64 "src/options/parse_opts.cc"
{
	YYCTYPE yych;
	unsigned int yyaccept = 0;
	static const unsigned char yybm[] = {
		  0, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
	};
	yych = (YYCTYPE)*YYCURSOR;
	if (yych <= 0x00) goto yy2;
	if (yych == '-') goto yy6;
	goto yy4;
yy2:
	++YYCURSOR;
#line 66 "../src/options/parse_opts.re"
	{ ERROR("bad option: %s", *argv); }
#line 110 "src/options/parse_opts.cc"
yy4:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yybm[0+yych] & 128) {
		goto yy4;
	}
	goto yy8;
yy6:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych <= '-') {
		if (yych <= 0x00) goto yy10;
		if (yych >= '-') goto yy12;
	} else {
		if (yych == 'W') goto yy14;
	}
#line 80 "../src/options/parse_opts.re"
	{ goto opt_short; }
#line 127 "src/options/parse_opts.cc"
yy8:
	++YYCURSOR;
#line 78 "../src/options/parse_opts.re"
	{ if (!set_source_file(globopts, *argv))     return EXIT_FAIL; goto opt; }
#line 132 "src/options/parse_opts.cc"
yy10:
	++YYCURSOR;
#line 77 "../src/options/parse_opts.re"
	{ if (!set_source_file(globopts, "<stdin>")) return EXIT_FAIL; goto opt; }
#line 137 "src/options/parse_opts.cc"
yy12:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych <= 0x00) goto yy16;
#line 81 "../src/options/parse_opts.re"
	{ goto opt_long; }
#line 143 "src/options/parse_opts.cc"
yy14:
	yyaccept = 0;
	yych = (YYCTYPE)*(YYMARKER = ++YYCURSOR);
	if (yych <= 'e') {
		if (yych <= 0x00) goto yy18;
		if (yych >= 'e') goto yy20;
	} else {
		if (yych == 'n') goto yy22;
	}
yy15:
#line 85 "../src/options/parse_opts.re"
	{ option = Warn::W;        goto opt_warn; }
#line 156 "src/options/parse_opts.cc"
yy16:
	++YYCURSOR;
#line 68 "../src/options/parse_opts.re"
	{
        // remaining args are non-options, so they must be input files
        // re2c expects exactly one input file
        for (char *f; next(f, argv); ) {
            if (!set_source_file(globopts, f)) return EXIT_FAIL;
        }
        goto end;
    }
#line 168 "src/options/parse_opts.cc"
yy18:
	++YYCURSOR;
#line 83 "../src/options/parse_opts.re"
	{ msg.warn.set_all ();       goto opt; }
#line 173 "src/options/parse_opts.cc"
yy20:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy23;
yy21:
	YYCURSOR = YYMARKER;
	if (yyaccept == 0) {
		goto yy15;
	} else {
		goto yy27;
	}
yy22:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'o') goto yy24;
	goto yy21;
yy23:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy25;
	goto yy21;
yy24:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy26;
	goto yy21;
yy25:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'o') goto yy28;
	goto yy21;
yy26:
	yyaccept = 1;
	yych = (YYCTYPE)*(YYMARKER = ++YYCURSOR);
	if (yych == 'e') goto yy29;
yy27:
#line 86 "../src/options/parse_opts.re"
	{ option = Warn::WNO;      goto opt_warn; }
#line 207 "src/options/parse_opts.cc"
yy28:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy30;
	goto yy21;
yy29:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy31;
	goto yy21;
yy30:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych <= 0x00) goto yy32;
	if (yych == '-') goto yy34;
	goto yy21;
yy31:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy36;
	goto yy21;
yy32:
	++YYCURSOR;
#line 84 "../src/options/parse_opts.re"
	{ msg.warn.set_all_error (); goto opt; }
#line 229 "src/options/parse_opts.cc"
yy34:
	++YYCURSOR;
#line 87 "../src/options/parse_opts.re"
	{ option = Warn::WERROR;   goto opt_warn; }
#line 234 "src/options/parse_opts.cc"
yy36:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych != 'o') goto yy21;
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych != 'r') goto yy21;
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych != '-') goto yy21;
	++YYCURSOR;
#line 88 "../src/options/parse_opts.re"
	{ option = Warn::WNOERROR; goto opt_warn; }
#line 245 "src/options/parse_opts.cc"
}
#line 89 "../src/options/parse_opts.re"


opt_warn:

#line 252 "src/options/parse_opts.cc"
{
	YYCTYPE yych;
	yych = (YYCTYPE)*YYCURSOR;
	switch (yych) {
	case 'c':	goto yy45;
	case 'e':	goto yy46;
	case 'm':	goto yy47;
	case 'n':	goto yy48;
	case 's':	goto yy49;
	case 'u':	goto yy50;
	default:	goto yy43;
	}
yy43:
	++YYCURSOR;
yy44:
#line 93 "../src/options/parse_opts.re"
	{ ERROR("bad warning: %s", *argv); }
#line 270 "src/options/parse_opts.cc"
yy45:
	yych = (YYCTYPE)*(YYMARKER = ++YYCURSOR);
	if (yych == 'o') goto yy51;
	goto yy44;
yy46:
	yych = (YYCTYPE)*(YYMARKER = ++YYCURSOR);
	if (yych == 'm') goto yy53;
	goto yy44;
yy47:
	yych = (YYCTYPE)*(YYMARKER = ++YYCURSOR);
	if (yych == 'a') goto yy54;
	goto yy44;
yy48:
	yych = (YYCTYPE)*(YYMARKER = ++YYCURSOR);
	if (yych == 'o') goto yy55;
	goto yy44;
yy49:
	yych = (YYCTYPE)*(YYMARKER = ++YYCURSOR);
	if (yych == 'e') goto yy56;
	if (yych == 'w') goto yy57;
	goto yy44;
yy50:
	yych = (YYCTYPE)*(YYMARKER = ++YYCURSOR);
	if (yych == 'n') goto yy58;
	if (yych == 's') goto yy59;
	goto yy44;
yy51:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'n') goto yy60;
yy52:
	YYCURSOR = YYMARKER;
	goto yy44;
yy53:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'p') goto yy61;
	goto yy52;
yy54:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 't') goto yy62;
	goto yy52;
yy55:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'n') goto yy63;
	goto yy52;
yy56:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'n') goto yy64;
	goto yy52;
yy57:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'a') goto yy65;
	goto yy52;
yy58:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'd') goto yy66;
	if (yych == 'r') goto yy67;
	goto yy52;
yy59:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy68;
	goto yy52;
yy60:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'd') goto yy69;
	goto yy52;
yy61:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 't') goto yy70;
	goto yy52;
yy62:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'c') goto yy71;
	goto yy52;
yy63:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'd') goto yy72;
	goto yy52;
yy64:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 't') goto yy73;
	goto yy52;
yy65:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'p') goto yy74;
	goto yy52;
yy66:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy75;
	goto yy52;
yy67:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy76;
	goto yy52;
yy68:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'l') goto yy77;
	goto yy52;
yy69:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'i') goto yy78;
	goto yy52;
yy70:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'y') goto yy79;
	goto yy52;
yy71:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'h') goto yy80;
	goto yy52;
yy72:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy81;
	goto yy52;
yy73:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'i') goto yy82;
	goto yy52;
yy74:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'p') goto yy83;
	goto yy52;
yy75:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'f') goto yy84;
	goto yy52;
yy76:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'a') goto yy85;
	goto yy52;
yy77:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy86;
	goto yy52;
yy78:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 't') goto yy87;
	goto yy52;
yy79:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy88;
	goto yy52;
yy80:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy89;
	goto yy52;
yy81:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 't') goto yy90;
	goto yy52;
yy82:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'n') goto yy91;
	goto yy52;
yy83:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy92;
	goto yy52;
yy84:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'i') goto yy93;
	goto yy52;
yy85:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'c') goto yy94;
	goto yy52;
yy86:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 's') goto yy95;
	goto yy52;
yy87:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'i') goto yy96;
	goto yy52;
yy88:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'c') goto yy97;
	goto yy52;
yy89:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy98;
	goto yy52;
yy90:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy99;
	goto yy52;
yy91:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy100;
	goto yy52;
yy92:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'd') goto yy101;
	goto yy52;
yy93:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'n') goto yy102;
	goto yy52;
yy94:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'h') goto yy103;
	goto yy52;
yy95:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 's') goto yy104;
	goto yy52;
yy96:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'o') goto yy105;
	goto yy52;
yy97:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'h') goto yy106;
	goto yy52;
yy98:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'm') goto yy107;
	goto yy52;
yy99:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy108;
	goto yy52;
yy100:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'l') goto yy109;
	goto yy52;
yy101:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy110;
	goto yy52;
yy102:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy111;
	goto yy52;
yy103:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'a') goto yy112;
	goto yy52;
yy104:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy113;
	goto yy52;
yy105:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'n') goto yy114;
	goto yy52;
yy106:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'a') goto yy115;
	goto yy52;
yy107:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'p') goto yy116;
	goto yy52;
yy108:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'm') goto yy117;
	goto yy52;
yy109:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy118;
	goto yy52;
yy110:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy119;
	goto yy52;
yy111:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'd') goto yy120;
	goto yy52;
yy112:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'b') goto yy121;
	goto yy52;
yy113:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy122;
	goto yy52;
yy114:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy123;
	goto yy52;
yy115:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy124;
	goto yy52;
yy116:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 't') goto yy125;
	goto yy52;
yy117:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'i') goto yy126;
	goto yy52;
yy118:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'i') goto yy127;
	goto yy52;
yy119:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'a') goto yy128;
	goto yy52;
yy120:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy129;
	goto yy52;
yy121:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'l') goto yy130;
	goto yy52;
yy122:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 's') goto yy131;
	goto yy52;
yy123:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'o') goto yy132;
	goto yy52;
yy124:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'a') goto yy133;
	goto yy52;
yy125:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'y') goto yy134;
	goto yy52;
yy126:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'n') goto yy135;
	goto yy52;
yy127:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'n') goto yy136;
	goto yy52;
yy128:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'n') goto yy137;
	goto yy52;
yy129:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'c') goto yy138;
	goto yy52;
yy130:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy139;
	goto yy52;
yy131:
	yych = (YYCTYPE)*++YYCURSOR;
